Post v21.09.0
-------------
  - Set ignore_lsp_down to true as default, so that ARP responder flows are
    installed together with other flows when a logical switch port is created,
    without having to wait for the port to be UP.  CMS should set it to false
    if not desired.
  - Added Load_Balancer_Group support, which simplifies large scale
    configurations of load balancers.

OVN v21.09.0 - 01 Oct 2021
--------------------------
  - Added Control Plane Protection support (control plane traffic metering).
  - Added path MTU discovery for ingress traffic originated outside of the
    cluster.
  - Introduced a new "label" field for "allow" and "allow-related" ACLs
    which helps in debugging/backtracking the ACL which allowed a particular
    connection.
  - Allow static routes without nexthops.
  - Enabled logical dp groups as a default.  CMS should disable it if not
    desired.

OVN v21.06.0 - 18 Jun 2021
-------------------------
  - ovn-northd-ddlog: New implementation of northd, based on DDlog.  This
    implementation is incremental, meaning that it only recalculates what is
    needed for the southbound database when northbound changes occur.  It is
    expected to scale better than the C implementation, for large deployments.
    (This may take testing and tuning to be effective.)  This version of OVN
    requires DDLog 0.38.
  - Introduce ovn-controller incremental processing engine statistics
  - Introduced parallel processing in ovn-northd with the NB_Global config option
    'use_parallel_build' to enable it.  It is disabled by default.
  - Support vlan-passthru mode for tag=0 localnet ports.
  - Support custom 802.11ad EthType for localnet ports.
  - Add a new NB Global option - use_ct_inv_match with the default value of
    true. If this is set to false, then the logical field - "ct.inv" will not
    be used in the logical flow matches.  CMS can consider setting this to
    false, if they want to use smart NICs which don't support offloading