@@ -2799,6 +2799,29 @@
           prefix according to RFC3663
         </p>
       </column>
+
+      <column name="options" key="gateway_mtu">
+        <p>
+          Configures the maximum length, excluding VLAN and Ethernet header,
+          of packets that should be allowed to be received by distributed
+          and gateway router logical ports.  For all packets with a larger
+          size than this value ICMP (v4/v6) error packets are generated
+          indicating that fragmentation should be performed before sending
+          packets to the OVN port.
+        </p>
+      </column>
+
+      <column name="options" key="gateway_mtu_bypass">
+        <p>
+          When configured, represents a match expression, in the same
+          expression language used for the <ref column="match"
+          table="Logical_Flow" db="OVN_Southbound"/> column in the OVN
+          Southbound database's <ref table="Logical_Flow" db="OVN_Southbound"/>
+          table.  Packets matching this expression will bypass the length
+          check configured through the
+          <ref column="options" key="gateway_mtu"/> option.
+        </p>
+      </column>
     </group>
 
     <group title="Attachment">
